# Cpp23-Modules-Template

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: StdModules.cmake
src/: CMakeLists.txt  args.cppm  demo.ixx  main.cpp  mylib.cppm  mylib.ixx
tests/: CMakeLists.txt  test_args.cpp  test_demo.cpp  test_mylib.cpp
